--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,65 @@
+.green {
+  background: green;
+}
+
+.pink {
+  background: pink;
+}
+
+.yellow {
+  background: yellow;
+}
+
+.orange {
+  background: orange;
+}
+
 body {
   font-family: Poppins;
   margin: 0;
   padding: 0;
 }
 
-.header {
+body .header {
   padding: 10px;
   text-align: center;
-  background: #555;
 }
 
-.header h1 {
+body .header h1 {
   font-weight: 600;
   margin: 0;
+}
+
+body .main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 10%;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+body .main button {
+  border-radius: 30px;
+  outline: none;
+  border: none;
+  padding: 10px;
+  margin: 30px;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+}
+
+body .footer {
+  height: 100px;
+}
+
+@media only screen and (max-width: 600px) {
+  body .main {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 /*# sourceMappingURL=style.css.map */
