--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body {
 }
 
 body .header {
+  border: #000 solid;
   padding: 10px;
   text-align: center;
 }
@@ -48,10 +49,12 @@ body .main button {
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
+  border: #000 solid;
 }
 
 body .footer {
   height: 100px;
+  border: #000 solid;
 }
 
 @media only screen and (max-width: 600px) {
